# PlaneSweepLib

./: CMakeLists.txt  Readme.md
data/fisheyeCamera/902-F120-LF120/: calib.txt  images.txt
data/fisheyeCamera/902-F120-RF120/: calib.txt  images.txt
data/fisheyeCamera/902-Four-Cam/: calib.txt  freespace.txt  images.txt  stereo_masks.txt  view_masks.txt
data/fisheyeCamera/902-Seq/: calib.txt  poses_seq.txt
data/fisheyeCamera/902-Tri-Cam/: calib.txt  images.txt
data/fisheyeCamera/902-Video/: videos.txt
data/test/: 1575525305904337000.txt  camera.timestamps  cameraFrameLocation.txt  images.txt  projectTest.txt  projectTestPly.txt  projectTestPly_F60.txt  projectTestPly_LF120.txt  projectTestPly_RF120.txt  scanLocation.txt  syncCameraLidarData.txt  syncCameraLidarData2.txt
data/test/lidarPointClouds/: 1575525306402750000.txt  1575525306902696000.txt  1575525308604481000.txt  1575525309200990000.txt  point_clouds.txt  poses.txt
fisheyeTestResultsSaic/grayscaleZNCC/NoOcclusionHandling/: pointCloud.ply  pointCloudFreespace.ply  pointCloudLocal.ply  pointCloudLocalPlane.ply
src/: CMakeLists.txt
src/PSL/: CMakeLists.txt
src/PSL/psl_base/: fishEyeCameraMatrix.cpp  fishEyeCameraMatrix.h  fishEyeDepthMap.cpp  fishEyeDepthMap.h  grid.cpp
src/PSL/psl_cudaBase/: cudaFishEyeImageProcessor.cpp
src/PSL/psl_stereo/: cudaFishEyePlaneSweep.cpp  cudaFishEyePlaneSweep.cu  cudaFishEyePlaneSweep.h
src/PSLTests/: CMakeLists.txt  fisheyePlanesweepTest.cpp  fisheyePlanesweepTestSaic.cpp  fisheyePlanesweepTestSaicSequence.cpp  fisheyePlanesweepTestSaicVideo.cpp
src/Tools/: CMakeLists.txt  createVideoSequence.cpp  pointCloudFusion.cpp  pointCloudProjection.cpp  pointCloudProjectionFromPly.cpp  queryLocalPointClouds.cpp  searchCameraLocation.cpp  searchScanLocation.cpp  syncCameraLidar.cpp
